<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authorization.RegisterActivity"
    android:background="@color/background">

    <Button
        android:id="@+id/backToLoginActivityBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/background"
        android:text="Назад"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:backgroundTint="@color/background"
        android:id="@+id/mainMoscowIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_or_register_image"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/text_registration"
        android:textSize="30sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMoscowIv" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_lin"
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/registerText"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/icon_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_username"
            android:layout_gravity="center_vertical"
            android:importantForAccessibility="no" />

        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/inter_light"
            android:hint="@string/text_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_lin"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/username_lin"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconPassword"
            android:importantForAccessibility="no" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/inter_light"
            android:hint="@string/text_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_lin"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/password_lin"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_email"
            android:layout_gravity="center_vertical"
            android:importantForAccessibility="no" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/inter_light"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />
    </LinearLayout>


    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/inter_light"
        android:text="@string/text_registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_lin" />

</androidx.constraintlayout.widget.ConstraintLayout>